<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/image_name_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/image_content"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_image_fragment"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:contentDescription="@string/mineImage"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            app:srcCompat="?attr/colorBackgroundFloating" />

        <LinearLayout
            android:id="@+id/insideLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_image_fragment"
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/location"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/date_image_fragment"
                    android:layout_width="174dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="saddas"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/delete_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/ic_delete_button"
                    android:contentDescription="@string/delete_button_content"
                    android:src="@drawable/ic_delete" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>